// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitiesList.vue should create component with cities list ASC 1`] = `
<div class="cities-list-wrapper content-section">
  <h1>Cities</h1>
  <div class="cities-list-content mt-4">
    <div class="cities-list-filter mb-3">
      <div class="form-group md:w-1/2 lg:w-1/4 w-full">
        <div class="form-control-icon"><input placeholder="Search cities" type="text" name="search" autocomplete="off" class="form-control">
          <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
              <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
            </svg></div>
        </div>
      </div> <button class="btn btn-yellow btn-sm btn-icon ml-0 md:ml-3 mt-2 md:mt-0"><span>Sort</span>
        <!----> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 ml-3 fill-current">
          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4h13M3 8h9m-9 4h9m5-4v12m0 0l-4-4m4 4l4-4"></path>
        </svg>
      </button>
    </div>
    <hr>
    <div>
      <citycard-stub city="A" class="mt-3"></citycard-stub>
      <citycard-stub city="B" class="mt-3"></citycard-stub>
      <citycard-stub city="C" class="mt-3"></citycard-stub>
      <citycard-stub city="D" class="mt-3"></citycard-stub>
    </div>
  </div>
</div>
`;

exports[`CitiesList.vue should search and return no results 1`] = `
<div class="cities-list-wrapper content-section">
  <h1>Cities</h1>
  <div class="cities-list-content mt-4">
    <div class="cities-list-filter mb-3">
      <div class="form-group md:w-1/2 lg:w-1/4 w-full">
        <div class="form-control-icon"><input placeholder="Search cities" type="text" name="search" autocomplete="off" class="form-control">
          <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
              <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
            </svg></div>
        </div>
      </div> <button class="btn btn-yellow btn-sm btn-icon ml-0 md:ml-3 mt-2 md:mt-0"><span>Sort</span>
        <!----> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 ml-3 fill-current">
          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4h13M3 8h9m-9 4h9m5-4v12m0 0l-4-4m4 4l4-4"></path>
        </svg>
      </button>
    </div>
    <hr>
    <div class="mt-3">
      <p class="text-sm font-semibold mt-1">
        Sorry we couldn't find any city with your search term.
      </p>
    </div>
  </div>
</div>
`;

exports[`CitiesList.vue should search and return results 1`] = `
<div class="cities-list-wrapper content-section">
  <h1>Cities</h1>
  <div class="cities-list-content mt-4">
    <div class="cities-list-filter mb-3">
      <div class="form-group md:w-1/2 lg:w-1/4 w-full">
        <div class="form-control-icon"><input placeholder="Search cities" type="text" name="search" autocomplete="off" class="form-control">
          <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
              <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
            </svg></div>
        </div>
      </div> <button class="btn btn-yellow btn-sm btn-icon ml-0 md:ml-3 mt-2 md:mt-0"><span>Sort</span>
        <!----> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 ml-3 fill-current">
          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4h13M3 8h9m-9 4h9m5-4v12m0 0l-4-4m4 4l4-4"></path>
        </svg>
      </button>
    </div>
    <hr>
    <div>
      <citycard-stub city="C" class="mt-3"></citycard-stub>
      <citycard-stub city="D" class="mt-3"></citycard-stub>
    </div>
  </div>
</div>
`;

exports[`CitiesList.vue should search return results and sort items 1`] = `
<div class="cities-list-wrapper content-section">
  <h1>Cities</h1>
  <div class="cities-list-content mt-4">
    <div class="cities-list-filter mb-3">
      <div class="form-group md:w-1/2 lg:w-1/4 w-full">
        <div class="form-control-icon"><input placeholder="Search cities" type="text" name="search" autocomplete="off" class="form-control">
          <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
              <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
            </svg></div>
        </div>
      </div> <button class="btn btn-yellow btn-sm btn-icon ml-0 md:ml-3 mt-2 md:mt-0"><span>Sort</span>
        <!----> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 ml-3 fill-current">
          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4h13M3 8h9m-9 4h9m5-4v12m0 0l-4-4m4 4l4-4"></path>
        </svg>
      </button>
    </div>
    <hr>
    <div>
      <citycard-stub city="C" class="mt-3"></citycard-stub>
      <citycard-stub city="D" class="mt-3"></citycard-stub>
    </div>
  </div>
</div>
`;

exports[`CitiesList.vue should search return results and sort items 2`] = `
<div class="cities-list-wrapper content-section">
  <h1>Cities</h1>
  <div class="cities-list-content mt-4">
    <div class="cities-list-filter mb-3">
      <div class="form-group md:w-1/2 lg:w-1/4 w-full">
        <div class="form-control-icon"><input placeholder="Search cities" type="text" name="search" autocomplete="off" class="form-control">
          <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
              <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
            </svg></div>
        </div>
      </div> <button class="btn btn-yellow btn-sm btn-icon ml-0 md:ml-3 mt-2 md:mt-0"><span>Sort</span> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 ml-3 fill-current">
          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4h13M3 8h9m-9 4h6m4 0l4-4m0 0l4 4m-4-4v12"></path>
        </svg>
        <!---->
      </button>
    </div>
    <hr>
    <div>
      <citycard-stub city="D" class="mt-3"></citycard-stub>
      <citycard-stub city="C" class="mt-3"></citycard-stub>
    </div>
  </div>
</div>
`;

exports[`CitiesList.vue should toggle sort button 1`] = `
<div class="cities-list-wrapper content-section">
  <h1>Cities</h1>
  <div class="cities-list-content mt-4">
    <div class="cities-list-filter mb-3">
      <div class="form-group md:w-1/2 lg:w-1/4 w-full">
        <div class="form-control-icon"><input placeholder="Search cities" type="text" name="search" autocomplete="off" class="form-control">
          <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
              <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
            </svg></div>
        </div>
      </div> <button class="btn btn-yellow btn-sm btn-icon ml-0 md:ml-3 mt-2 md:mt-0"><span>Sort</span> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 ml-3 fill-current">
          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4h13M3 8h9m-9 4h6m4 0l4-4m0 0l4 4m-4-4v12"></path>
        </svg>
        <!---->
      </button>
    </div>
    <hr>
    <div>
      <citycard-stub city="D" class="mt-3"></citycard-stub>
      <citycard-stub city="C" class="mt-3"></citycard-stub>
      <citycard-stub city="B" class="mt-3"></citycard-stub>
      <citycard-stub city="A" class="mt-3"></citycard-stub>
    </div>
  </div>
</div>
`;

exports[`CitiesList.vue should toggle sort button 2`] = `
<div class="cities-list-wrapper content-section">
  <h1>Cities</h1>
  <div class="cities-list-content mt-4">
    <div class="cities-list-filter mb-3">
      <div class="form-group md:w-1/2 lg:w-1/4 w-full">
        <div class="form-control-icon"><input placeholder="Search cities" type="text" name="search" autocomplete="off" class="form-control">
          <div class="form-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
              <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
            </svg></div>
        </div>
      </div> <button class="btn btn-yellow btn-sm btn-icon ml-0 md:ml-3 mt-2 md:mt-0"><span>Sort</span>
        <!----> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 ml-3 fill-current">
          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4h13M3 8h9m-9 4h9m5-4v12m0 0l-4-4m4 4l4-4"></path>
        </svg>
      </button>
    </div>
    <hr>
    <div>
      <citycard-stub city="A" class="mt-3"></citycard-stub>
      <citycard-stub city="B" class="mt-3"></citycard-stub>
      <citycard-stub city="C" class="mt-3"></citycard-stub>
      <citycard-stub city="D" class="mt-3"></citycard-stub>
    </div>
  </div>
</div>
`;
